FIXED: Review block: Remove explicit width so that it won't overlap containers if it has margin applied
git-svn-id: https://cssigniter.svn.beanstalkapp.com/cssigniter/plugins/gutenbee/trunk@32038 4294cb29-2c39-44b5-8b85-408dc27d7d38

--- a/src/blocks/review/_common.scss
+++ b/src/blocks/review/_common.scss
@@ -1,6 +1,5 @@
 .wp-block-gutenbee-review {
   display: flex;
-  width: 100%;
   margin: 0;
   align-items: center;
   align-self: flex-start;
